2013-01-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php
	include/functions.php
	operation/agentes/alerts_status.php
	operation/agentes/estado_agente.php
	godmode/agentes/module_manager.php
	godmode/agentes/modificar_agente.php
	godmode/agentes/configurar_agente.php
	godmode/menu.php
	godmode/alerts/alert_list.list.php
	godmode/alerts/alert_list.php: Added checks to new flag AD
	in godmode views for agents, modules and alerts. Clean 
	some old extra_sql (policy acls) code

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* pandoradb_data.sql: Added a missing column name in
	tnetwork_component insert statemen.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* pandoradb_data.sql: Fixed tnetwork_component insert.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_component_groups.php
	 godmode/modules/manage_network_components.php: Don't remove 
	 parent component groups with childs assigned to components.
	 
	 Merged from branches.

2013-01-14 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/modules/manage_nc_groups.php: Parent row removed.
	
	Merged from branches.
;:
2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/network_components.postgreSQL.sql,
	extras/local_components.postgreSQL.sql,
	extras/network_components.mysql.sql,
	extras/network_components.oracle.sql,
	extras/local_components.mysql.sql,
	extras/local_components.oracle.sql: Renamed files.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/local_components.postgreSQL.sql,
	extras/local_components.mysql.sql,
	extras/local_components.oracle.sql: Create new sql script to 
	add new network components and groups by yourself if something
	fails.

2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>

	* extras/pandoradb_migrate_4.0.x_to_5.0.oracle.sql,
	extras/pandoradb_migrate_4.0.x_to_5.0.postgreSQL.sql: Added network
	components and groups to migration script.
