@@ -1,3 +1,7 @@
+2013-01-14  Dario Rodriguez <dario.rodriguez@artica.es>
+
+	* pandoradb_data.sql: Fixed insert for MySQL plugin.
+
 2013-01-14  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions_ui.php
